fixing positioning on mobile
needed to use absolute units

--- a/style.css
+++ b/style.css
@@ -16,14 +16,13 @@ video {
     display: grid;
     margin: 0 auto;
     justify-content: center;
-    width: 900px;
+    width: 1280px;
     height: auto;
     overflow: hidden;
 }
 
-.MAIN_BORDER {
-    display: grid;
-    margin: 0 auto;
+.BORDER_DIV {
+    display: flex;
     justify-content: center;
     width: 900px;
     border-style: outset;
